minijinja/tests/snapshots/test_templates__vm@err_bad_call.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "This is {{ an_unknown_function() }}!"
info: {}
input_file: minijinja/tests/inputs/err_bad_call.txt
---
!!!ERROR!!!

Error {
    kind: UnknownFunction,
    detail: "an_unknown_function is unknown",
    name: "err_bad_call.txt",
    line: 1,
}

---------------------------- Template Source -----------------------------
   1 > This is {{ an_unknown_function() }}!
     i            ^^^^^^^^^^^^^^^^^^^^^ unknown function
--------------------------------------------------------------------------
Referenced variables: {
    an_unknown_function: Undefined,
}
--------------------------------------------------------------------------



