minijinja/tests/snapshots/test_templates__vm@err_bad_unary.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{{ foo(-[1, 2]) }}"
info: {}
input_file: minijinja/tests/inputs/err_bad_unary.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    name: "err_bad_unary.txt",
    line: 1,
}

invalid operation (in err_bad_unary.txt:1)
------------------------------ err_bad_unary.txt ------------------------------
   1 > {{ foo(-[1, 2]) }}
     i        ^^^^^^^ invalid operation
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------

