minijinja/tests/snapshots/test_templates__vm@err_debug_info_in_loop.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "{%- for item in items if item > 0 %}\n  {{ item * factor + item.missing.attr }}\n{%- endfor %}"
info:
  items:
    - 1
    - 2
  factor: 2
input_file: minijinja/tests/inputs/err_debug_info_in_loop.txt
---
!!!ERROR!!!

Error {
    kind: UndefinedError,
    detail: "`item.missing` is undefined",
    name: "err_debug_info_in_loop.txt",
    line: 2,
}

undefined value: `item.missing` is undefined (in err_debug_info_in_loop.txt:2)
------------------------- err_debug_info_in_loop.txt --------------------------
   1 | {%- for item in items if item > 0 %}
   2 >   {{ item * factor + item.missing.attr }}
     i                          ^^^^^^^^^^^^^ undefined value
   3 | {%- endfor %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    factor: 2,
    item: 1,
    items: [
        1,
        2,
    ],
    loop: <loop 0/2>,
}
-------------------------------------------------------------------------------
