minijinja/tests/snapshots/test_templates__vm@err_debug_info_tabs.txt.snap
---
source: minijinja/tests/test_templates.rs
description: "<ul>\n\t\t<li>{{ items.missing.attr }}</li>\n</ul>"
info:
  items:
    - 1
    - 2
input_file: minijinja/tests/inputs/err_debug_info_tabs.txt
---
!!!ERROR!!!

Error {
    kind: UndefinedError,
    detail: "`items.missing` is undefined",
    name: "err_debug_info_tabs.txt",
    line: 2,
}

undefined value: `items.missing` is undefined (in err_debug_info_tabs.txt:2)
--------------------------- err_debug_info_tabs.txt ---------------------------
   1 | <ul>
   2 > 		<li>{{ items.missing.attr }}</li>
     i 		            ^^^^^^^^^^^^^ undefined value
   3 | </ul>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    items: [
        1,
        2,
    ],
}
-------------------------------------------------------------------------------
